description tag added

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,16 @@ body {
 h1 {
   text-align: center;
   color: white;
+  font-size: 50px;
 }
 
 h2 {
+  font-size: 30px;
+  text-align: center;
+  color: rgb(146, 117, 80);
+}
+
+h3 {
   font-size: 16px;
   text-align: justify;
   color: rgb(57, 53, 53);
@@ -21,9 +28,9 @@ img {
   box-shadow: 5px 5px rgba(128, 128, 128, 0.07);
 }
 
-p {
+.contact {
   text-align: center;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .container {
